--- a/dada/extras/documentation/pod_source/FAQ-mailing_list_sending.pod
+++ b/dada/extras/documentation/pod_source/FAQ-mailing_list_sending.pod
@@ -240,9 +240,9 @@ When set to, B<1> after every time Dada Mail is run via the, C<mail.cgi> script,
 
 The problem is, you never are guaranteed when Dada Mail is going to be run, so your mailing monitoring will be somewhat lopsided. 
 
-=head3 Dada Bridge
+=head3 Bridge
 
-If you're using the Dada Bridge plugin, it also has the same functionality as the B<Mailing Monitor> plugin built in. 
+If you're using the Bridge plugin, it also has the same functionality as the B<Mailing Monitor> plugin built in. 
 
 =head2 Mass Mailings/Auto Pickup API 
 
