Removed the embedded pod in the Config.pm and moved it to its own pod file, "global_variables.pod"

--- a/dada/extras/documentation/pod_source/features-html_template_pro.pod
+++ b/dada/extras/documentation/pod_source/features-html_template_pro.pod
@@ -27,6 +27,6 @@ Once C<HTML::Template::Pro> is installed, there's nothing else you need to do, t
 You can disable using C<HTML::Template::Pro>, if you so desire.  See the docs for the C<$TEMPLATE_SETTINGS> 
 config variable:
 
-L<http://dadamailproject.com/d/Config.pm.html#_template_settings>, specifically, the, C<engine> parameter. 
+L<http://dadamailproject.com/d/global_variables.pod.html#_template_settings>, specifically, the, C<engine> parameter. 
 
 =cut
