--- a/dada/extras/documentation/pod_source/install_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail.pod
@@ -6,7 +6,7 @@
 
 Here's the direct download to Dada Mail v6.0.0 
 
-L<https://github.com/downloads/justingit/dada-mail/dada-6_0_0-alpha1.tar.gz>
+L<https://github.com/downloads/justingit/dada-mail/dada-6_0_0-beta1.tar.gz>
 
 =head2 Pro Dada Subscriber?
 
@@ -14,9 +14,9 @@ Download Pro Dada at:
 
 L<http://dadamailproject.com/pro_dada>
 
-=head1 Step #2 Upload the, "dada-6_0_0-alpha1.tar.gz" distro to your cgi-bin
+=head1 Step #2 Upload the, "dada-6_0_0-beta1.tar.gz" distro to your cgi-bin
 
-Once you download the C<dada-6_0_0-alpha1.tar.gz> distro (you will B<not> have to uncompress the distribution), upload it to your hosting account's I<cgi-bin>.
+Once you download the C<dada-6_0_0-beta1.tar.gz> distro (you will B<not> have to uncompress the distribution), upload it to your hosting account's I<cgi-bin>.
 
 =begin html
 
@@ -35,11 +35,11 @@ Download the, C<uncompress_dada.cgi> script from here:
 =begin html 
 
 <ul>
-<li><strong><a href="https://raw.github.com/justingit/dada-mail/v6_0_0-alpha1_2012_11_09/uncompress_dada.cgi">uncompress_dada.cgi</a> (Save Page/Link As...)</strong></li></ul>
+<li><strong><a href="https://raw.github.com/justingit/dada-mail/v6_0_0-beta1_2012_11_20/uncompress_dada.cgi">uncompress_dada.cgi</a> (Save Page/Link As...)</strong></li></ul>
 
 =end html
 
-and upload this script (PlainTest/ASCII mode - NOT binary!) to your hosting account's I<cgi-bin> - right alongside the I<dada-6_0_0-alpha1.tar.gz> distro you just put up. 
+and upload this script (PlainTest/ASCII mode - NOT binary!) to your hosting account's I<cgi-bin> - right alongside the I<dada-6_0_0-beta1.tar.gz> distro you just put up. 
 
 =head1 Step #4 Change permissions of the, "uncompress_dada.cgi" file to, "755"
 
@@ -56,7 +56,7 @@ Once it's finished running, you should be presented a link to use the actual ins
 <p>See, <a href="./FAQ-install_upgrade.pod.html#prepping_dada_mail_manually">Prepping Dada Mail Manually</a> if this doesn't happen and you get a message in your browser window, sort of like this: </p>
 
 <pre>
-Can't find dada-6_0_0-alpha1.tar to uncompress!
+Can't find dada-6_0_0-beta1.tar to uncompress!
 
 You may have to uncompress and prep Dada Mail manually.
 </pre> 
